--- a/package.json
+++ b/package.json
@@ -16,8 +16,14 @@
   },
   "dependencies": {
     "gatsby": "^3.2.1",
+    "gatsby-plugin-typography": "^3.2.0",
+    "gatsby-source-filesystem": "^3.3.0",
+    "gatsby-transformer-remark": "^4.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "react-typography": "^0.16.19",
+    "typography": "^0.16.19",
+    "typography-theme-fairy-gates": "^0.16.19"
   }
 }
