--- a/package.json
+++ b/package.json
@@ -15,15 +15,19 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@reach/router": "^1.3.4",
     "gatsby": "^3.2.1",
     "gatsby-plugin-typography": "^3.2.0",
+    "gatsby-plugin-use-query-params": "^1.0.1",
     "gatsby-source-filesystem": "^3.3.0",
     "gatsby-transformer-remark": "^4.0.0",
+    "query-string": "^7.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-typography": "^0.16.19",
     "typography": "^0.16.19",
-    "typography-theme-fairy-gates": "^0.16.19"
+    "typography-theme-fairy-gates": "^0.16.19",
+    "use-query-params": "^1.2.2"
   }
 }
