--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@reach/router": "^1.3.4",
+    "bootstrap": "^4.6.0",
     "gatsby": "^3.2.1",
     "gatsby-plugin-typography": "^3.2.0",
     "gatsby-plugin-use-query-params": "^1.0.1",
@@ -23,6 +24,7 @@
     "gatsby-transformer-remark": "^4.0.0",
     "query-string": "^7.0.0",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-typography": "^0.16.19",
